--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: white;
-    color: rgb(52, 165, 52);
+    background-color: rgb(0, 0, 0);
+    color: rgb(93, 243, 93);
 }
